usecase-1/apiproducts/httpbin/httpbin-apiproduct-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin-apiproduct
  namespace: kgateway-system
  labels:
    app: apis
  annotations:
    delegation.kgateway.dev/inherit-parent-matcher: "true"
spec:
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
      - name: httpbin
        namespace: kgateway-system
        port: 8000
